# google-doc-sheet-bypass

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
templates/: index.html
